[package]
name = "tictactoe_q"
version = "0.1.0"
authors = ["Dusten Knull <dakatk97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl = { git = "https://github.com/dakatk/rust-rl-lib" }
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33.3"
